	PR debug/54402 	* var-tracking.c (fp_setter): Return false if there is REG_CFA_RESTORE 	hfp note. 	(vt_initialize): Look for fp_setter in any bb, not just successor of 	entry bb.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193152 138bc75d-0d04-0410-961f-82ee72b054a4